--- a/index.html
+++ b/index.html
@@ -52,8 +52,18 @@
                       <div class="gift-text mt20"> ¡HAS RECIBIDO UN VALE DE...! </div>
   
                       <div class="gift-text-name"> TU BUTSI </div>
-                      <div class="flip-txt">
-                        <div class=""> <i class="fas fa-sync"></i> <span class="tap-to-flip">Haz clic para girar</span></div>
+                      <div class="gift-details">
+                        <br>
+                        <br> Hola Buts,
+                        <br>
+                        <br> Hoy es tu super dia, asi que como buen hermano que soy, voy a regalarte una de las mejores tardes que puede tener una persona,
+                        una tarde de cine (pelicula a elegir) más una merienda increiblemente rica (a elegir por la persona que recibe este vale). Feliz cumple y escoge bien tus deseos.
+                        <br>
+                        <br>
+                        <br> Espero que disfrutes de tu regalo
+  
+                        <br>
+                        <person-name> Del pequeño Muts </person-name>
                       </div>
                     </div>
                     <div class="back">
