--- a/index.html
+++ b/index.html
@@ -51,44 +51,11 @@
                       </div>
                       <div class="gift-text mt20"> ¡HAS RECIBIDO UN VALE DE...! </div>
   
-                      <div class="gift-text-name"> TU BUTSI </div>
-                      <div class="gift-details">
-                        <br>
-                        <br> Hola Buts,
-                        <br>
-                        <br> Hoy es tu super dia, asi que como buen hermano que soy, voy a regalarte una de las mejores tardes que puede tener una persona,
-                        una tarde de cine (pelicula a elegir) más una merienda increiblemente rica (a elegir por la persona que recibe este vale). Feliz cumple y escoge bien tus deseos.
-                        <br>
-                        <br>
-                        <br> Espero que disfrutes de tu regalo
-  
-                        <br>
-                        <person-name> Del pequeño Muts </person-name>
-                      </div>
-                    </div>
-                    <div class="back">
-                      <div>
-                        <div class="gift-circle" style="left:42%">
-                          <div class="gift-img"></div>
+                      <div class="gift-text-name"> TU BUTSI 
+                        <br> ¡VALE POR UNA TARDE DE CINE Y MERIENDA O CENA!
                         </div>
                       </div>
-                      <div class="gift-text mt0 mb0"> Tarde de butsis </div>
-                      <price>Sin limite de precio (pero no te pases)</price>
-                      <div class="gift-details">
-                        <br>
-                        <br> Hola Buts,
-                        <br>
-                        <br> Hoy es tu super dia, asi que como buen hermano que soy, voy a regalarte una de las mejores tardes que puede tener una persona,
-                        una tarde de cine (pelicula a elegir) más una merienda increiblemente rica (a elegir por la persona que recibe este vale). Feliz cumple y escoge bien tus deseos.
-                        <br>
-                        <br>
-                        <br> Espero que disfrutes de tu regalo
-  
-                        <br>
-                        <person-name> Del pequeño Muts </person-name>
-                      </div>
-  
-                    </div>
+                    
                   </div>
                 </div>
               </div>
