--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                       <div class="gift-text mt20"> ¡HAS RECIBIDO UN VALE DE...! </div>
   
                       <div class="gift-text-name"> TU BUTSI 
-                        <br> ¡VALE POR UNA TARDE DE CINE Y MERIENDA O CENA!
-                        </div>
+                        <br> 
+                        <br>
+                        ¡VALE POR UNA TARDE DE CINE Y MERIENDA O CENA!
                       </div>
-                    
+                    </div>
                   </div>
                 </div>
               </div>
